[project]
name = "loading"
version = "1"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.13"
dependencies = [
    "pandas (==2.1.0)",
    "numpy (==1.25.0)",
    "matplotlib (==3.7.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
